fix: remove wrong background color

--- a/christmas-shop/styles/styles.css
+++ b/christmas-shop/styles/styles.css
@@ -958,7 +958,6 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #90beec;
     z-index: 2;
 }
 
